<resources>
    <string name="app_name">Ziyang\'s Android Labs</string>
    <string name="Welcome">Please Enter Your Email</string>
    <string name="button_message">Login</string>
    <string name="compound_button_message">Do you drink coffee?</string>
    <string name="editMessage">I am an edit text</string>
    <string name="hint">Type your email here</string>
    <string name="i_am_a_radio_button">I am a radio button</string>
    <string name="i_am_a_switch">I am a switch</string>
    <string name="algonquin">Algonquin</string>
    <string name="passw_text">Type your password here</string>
    <string name="call_number">Call Number</string>
</resources>