<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">
    <!-- empty comment -->

    <EditText
        android:id="@+id/PasswEditText"
        android:layout_width="357dp"
        android:layout_height="59dp"
        android:autofillHints=""
        android:inputType="textPassword"
        android:text="@string/editMessage"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/PasswTextView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/PasswTextView"
        app:layout_constraintVertical_bias="0.113"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/PasswTextView"
        android:layout_width="360dp"
        android:layout_height="71dp"
        android:text="@string/passw_text"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@id/myButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.627"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/myTextView"
        app:layout_constraintVertical_bias="0.294" />

    <TextView
        android:id="@+id/myTextView"
        android:layout_width="360dp"
        android:layout_height="71dp"
        android:text="@string/Welcome"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.042" />

    <Button
        android:id="@+id/myButton"
        android:layout_width="237dp"
        android:layout_height="52dp"
        android:layout_marginBottom="144dp"
        android:text="@string/button_message"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.327"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText

        android:id="@+id/myEditText"
        android:layout_width="354dp"
        android:layout_height="67dp"
        android:hint="@string/hint"
        android:inputType="textEmailAddress"
        android:text="@string/editMessage"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/myTextView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myTextView"
        app:layout_constraintVertical_bias="0.03" />

</androidx.constraintlayout.widget.ConstraintLayout>